add fb og tags in index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="author" content="ProfTavan - Julea Sergiu">
+    <meta property="og:image" content="https://idormenco.github.io/ProfTavan/img/fb-thumbnail-no-text.jpg" /> 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="www.proftavan.ro" />
+    <meta property="og:title" content="ProfTavan: Tavane extensibile in Iasi." />
+    <meta property="og:description" content="Tavane extensibile de calitate ,rapide in montare si elegante. Va oferim tavane: mate, lucioase, cu print personalizat si multe altele." />
     <title>Prof Tavan</title>
 
     <!-- Bootstrap core CSS -->
