--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="ProfTavan - Julea Sergiu">
     <meta property="og:image" content="https://idormenco.github.io/ProfTavan/img/fb-thumbnail-no-text.jpg" /> 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="www.proftavan.ro" />
+    <meta property="og:url" content="http://www.proftavan.ro" />
     <meta property="og:title" content="ProfTavan: Tavane extensibile in Iasi." />
     <meta property="og:description" content="Tavane extensibile de calitate ,rapide in montare si elegante. Va oferim tavane: mate, lucioase, cu print personalizat si multe altele." />
     <title>Prof Tavan</title>
